Tests passing against Java 11, Eclipse 2018-12